url.com for english version, url.cn for chinese version

--- a/Application/Home/View/layout.html
+++ b/Application/Home/View/layout.html
@@ -63,7 +63,7 @@
                             <li><a href="__URL__/advantages.html">Advantages</a></li>
                             <li><a href="__URL__/products.html">Products</a></li>
                             <li><a href="__URL__/contact.html">Contact</a></li>
-                            <li><a href="__URL__/cn_index.html">中文</a></li>
+                            <li><a href="http://www.aiermart.cn">中文</a></li>
                           </ul>
                         </div><!-- /.navbar-collapse -->
                       </div><!-- /.container-fluid -->
