--- a/Application/Home/View/layout_cn.html
+++ b/Application/Home/View/layout_cn.html
@@ -147,13 +147,13 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">WeChat QR Code</h4>
+            <h4 class="modal-title" id="myModalLabel">微信公众号：</h4>
           </div>
           <div class="modal-body" style="text-align: center;">
             <img src="__PUBLIC__/img/wechat.png" alt="">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
           </div>
         </div>
       </div>
