fix bug in chinese version index

--- a/Application/CnHome/View/Index/index.html
+++ b/Application/CnHome/View/Index/index.html
@@ -66,19 +66,19 @@
           <h2 >产品优势</h2>
           <ul class="address-block">
             <li>
-              <i class="fa fa-cog"></i> <a href="./cn_advantages.html#1">焊接技术</a>
+              <i class="fa fa-cog"></i> <a href="__URL__/advantages.html#1">焊接技术</a>
             </li>
             <li>
-              <i class="fa fa-life-ring"></i><a href="./cn_advantages.html#2"> 盘管技术</a>
+              <i class="fa fa-life-ring"></i><a href="__URL__/advantages.html#2"> 盘管技术</a>
             </li>
             <li>
-              <i class="fa fa-user"></i><a href="./cn_advantages.html#3"> 私人定制</a>
+              <i class="fa fa-user"></i><a href="__URL__/advantages.html#3"> 私人定制</a>
             </li>
             <li>
-              <i class="fa fa-thumbs-up"></i><a href="./cn_advantages.html#4"> 30年质量保证</a>
+              <i class="fa fa-thumbs-up"></i><a href="__URL__/advantages.html#4"> 30年质量保证</a>
             </li>
           </ul>
-          <a href="./cn_advantages.html" class="btn btn-view-works">详 情</a>
+          <a href="__URL__/advantages.html" class="btn btn-view-works">详 情</a>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
           <div class="col-sm-6 col-md-4">
             <div class="service-item">
               <i></i>
-              <a href="cn_products.html?Single-layer">
+              <a href="__URL__/products.html?Single-layer">
                 <img src="__PUBLIC__/img/portfolio/danceng/frontpage.jpg" alt="">
                 <h4>单层螺旋盘管</h4>
               </a>
@@ -105,7 +105,7 @@
           <div class="col-sm-6 col-md-4">
             <div class="service-item">
               <i></i>
-              <a href="cn_products.html?double-layer">
+              <a href="__URL__/products.html?double-layer">
                 <img src="__PUBLIC__/img/portfolio/shuangceng/frontpage.jpg" alt="">
                 <h4>双层螺旋盘管</h4>
               </a>
@@ -114,7 +114,7 @@
           <div class="col-sm-6 col-md-4">
             <div class="service-item">
               <i></i>
-              <a href="cn_products.html?bent">
+              <a href="__URL__/products.html?bent">
                 <img src="__PUBLIC__/img/portfolio/wanguan/frontpage.jpg" alt="">
                 <h4>弯管</h4>
               </a>
@@ -123,7 +123,7 @@
           <div class="col-sm-6 col-md-4">
              <div class="service-item">
               <i></i>
-              <a href="cn_products.html?logding">
+              <a href="__URL__/products.html?logding">
                 <img src="__PUBLIC__/img/portfolio/daofu/frontpage.jpg" alt="">
                 <h4>倒伏</h4>
               </a>
@@ -132,7 +132,7 @@
           <div class="col-sm-6 col-md-4">
             <div class="service-item">
               <i></i>
-              <a href="cn_products.html?straight">
+              <a href="__URL__/products.html?straight">
                 <img src="__PUBLIC__/img/portfolio/zhiguan/frontpage.jpg" alt="">
                 <h4>直管</h4>
               </a>
@@ -141,7 +141,7 @@
           <div class="col-sm-6 col-md-4">
             <div class="service-item">
               <i></i>
-              <a href="cn_products.html?transection">
+              <a href="__URL__/products.html?transection">
                 <img src="__PUBLIC__/img/portfolio/xieqie/frontpage.jpg" alt="">
                 <h4>斜切面</h4>
               </a>
